# ursnip-backend

./: .env.example  .gitignore  05_desktop_architecture.md  Cargo.toml  README.md  docker-compose.test.yml
.kiro/specs/ursnip-backend/: .config.kiro  design.md  requirements.md  tasks.md
docs/: API.md  DEPLOY_ORACLE_VM.md  ursnip-backend.postman_collection.json
migrations/: 0001_initial.sql  0002_seed.sql
scripts/: test-full.sh
src/: config.rs  errors.rs  lib.rs  logging.rs  main.rs  router.rs
src/admin/: handlers.rs  service.rs
src/ai/: handlers.rs  mod.rs  service.rs
src/auth/: handlers.rs  jwt.rs  mod.rs  oauth.rs  password.rs  service.rs
src/db/: mod.rs  pool.rs
src/email/: api_provider.rs  mod.rs  service.rs  smtp.rs  templates.rs
src/middleware/: admin_guard.rs  auth_extractor.rs  body_limit.rs  client_type_guard.rs  cors.rs  mod.rs  panic_recovery.rs  rate_limit.rs  security_headers.rs  subscription_context.rs  trace_id.rs
src/models/: common.rs
src/scheduler/: service.rs
src/subscription/: handlers.rs  invoice.rs  mod.rs  paddle.rs  service.rs  webhook.rs
src/sync/: handlers.rs  mod.rs  service.rs  session_registry.rs  websocket.rs
src/workspace/: handlers.rs  mod.rs  service.rs
templates/email/: admin_invite.html  admin_invite.txt  email_change_notification.html  email_change_notification.txt  email_change_verify.html  email_change_verify.txt  password_reset.html  password_reset.txt  team_invite.html  team_invite.txt
tests/: admin_integration_tests.rs  admin_property_tests.rs  ai_property_tests.proptest-regressions  ai_property_tests.rs  auth_integration_tests.rs  auth_property_tests.rs  middleware_integration_tests.rs  subscription_integration_tests.rs  subscription_property_tests.proptest-regressions  subscription_property_tests.rs  sync_integration_tests.rs  sync_property_tests.rs  workspace_property_tests.rs
