[package]
name = "ursnip-backend"
version = "0.1.0"
edition = "2021"
description = "Cloud backend for the Ursnip desktop application"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "rust_decimal", "migrate"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde-with-str"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
askama = "0.12"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "1"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Concurrency
dashmap = "5"

# Networking
ipnet = "2"

# Environment
dotenvy = "0.15"

# URL encoding
urlencoding = "2"

[dev-dependencies]
proptest = "1"
sha2 = "0.10"
hex = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "rust_decimal", "migrate"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio-tungstenite = "0.24"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
